add manifest